--- a/style.css
+++ b/style.css
@@ -1,220 +1,185 @@
-html {
-  height: 100%;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Open+Sans&display=swap');
+
+body{
+  font-family: 'Roboto', sans-serif;
+  overflow-x:hidden;
 }
 
-body {
-  background-color: #A5DEFB;
+/* Navbar css */
+
+.navbar{
+  font-family: 'Kalam', cursive;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 15px;
+  text-shadow: .1rem .1rem .8rem black;
+  background-color: rgba(53, 23, 74, 0.6)!important;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
+.navbar-nav li{
+  padding-right: 15px;
+}
+
+.navbar-dark .navbar-nav .nav-link{
+  color: white;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover{
+  color: darkgray;
+}
+
+/* Landing Page css */
+
+.home-inner{
+  background-image: url(img/seamless-abs.jpg);
+  filter: blur(3px);
+}
+
+.caption{
   width: 100%;
+  max-width: 100%;
+  position: absolute;
+  top: 38%;
+  z-index: 1;
+  color: aliceblue;
+  text-transform: uppercase;
 }
 
-.home {
-  border-radius: 25px;
-  text-align: right;
-  border-color: rgb(228, 36, 36);
-  display: block;
+.caption h1{
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-shadow: .1rem .1rem .8rem black;
 }
 
-header {
-  background-color: whitesmoke;
-  flex-direction: row;
-  border-radius: 25px;
-  width: 100%;
-  height: 90px;
-
-}
-
-header p {
-  text-align: left;
-  margin-left: 2%;
-  font-size: 80px;
-}
-
-header h1{
-  text-align: right;
-  margin-right: 5%;
-  font-size: 30px;
-}
-
-main {
-  width: 100%;
-  height: auto;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-main div p {
-  background-color: whitesmoke;
-  border-radius: 25px;
-  font-size: 50px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: 30%;
-  height: auto;
-}
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-
-.img_disp {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: auto;
-  height: 180px;
-}
-
-footer {
-  border-radius: 25px;
-  background-color: whitesmoke;
-  width: 100%;
-  height: 100px;
-}
-
-footer p {
-  text-align: left;
-  font-size: 20px;
-  padding-top: 10px;
-  margin-left: 2%;
-}
-
-/* unvisited link */
-a:link {
-  color: black;
-  text-decoration: none;
-}
-
-/* visited link */
-a:visited {
-  color: green;
-  text-decoration: none;
-}
-
-/* mouse over link */
-a:hover {
-  color: hotpink;
-  text-decoration: none;
-}
-
-/* selected link */
-a:active {
-  color: blue;
-  text-decoration: none;
-}
+/* Table css */
 
 .table-wrapper{
-    margin: 10px 70px 70px;
-    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+  margin: 10px 70px 70px;
+  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
 }
 
 .fl-table {
-    border-radius: 5px;
-    font-size: 12px;
-    font-weight: normal;
-    border: none;
-    border-collapse: collapse;
-    width: 100%;
-    max-width: 100%;
-    white-space: nowrap;
-    background-color: white;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: normal;
+  border: none;
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 100%;
+  white-space: nowrap;
+  background-color: white;
 }
 
 .fl-table td, .fl-table th {
-    text-align: center;
-    padding: 8px;
+  text-align: center;
+  padding: 8px;
 }
 
 .fl-table td {
-    border-right: 1px solid #f8f8f8;
-    font-size: 12px;
+  border-right: 1px solid #f8f8f8;
+  font-size: 12px;
 }
 
 .fl-table thead th {
-    color: #ffffff;
-    background: #4FC3A1;
+  color: #ffffff;
+  background: #4FC3A1;
 }
 
 
 .fl-table thead th:nth-child(odd) {
-    color: #ffffff;
-    background: #324960;
+  color: #ffffff;
+  background: #324960;
 }
 
 .fl-table tr:nth-child(even) {
-    background: #F8F8F8;
+  background: #F8F8F8;
 }
 
 /* Responsive */
 
 @media (max-width: 767px) {
-    .fl-table {
-        display: block;
-        width: 100%;
-    }
-    .table-wrapper:before{
-        content: "Scroll horizontally >";
-        display: block;
-        text-align: right;
-        font-size: 11px;
-        color: white;
-        padding: 0 0 10px;
-    }
-    .fl-table thead, .fl-table tbody, .fl-table thead th {
-        display: block;
-    }
-    .fl-table thead th:last-child{
-        border-bottom: none;
-    }
-    .fl-table thead {
-        float: left;
-    }
-    .fl-table tbody {
-        width: auto;
-        position: relative;
-        overflow-x: auto;
-    }
-    .fl-table td, .fl-table th {
-        padding: 20px .625em .625em .625em;
-        height: 60px;
-        vertical-align: middle;
-        box-sizing: border-box;
-        overflow-x: hidden;
-        overflow-y: auto;
-        width: 120px;
-        font-size: 13px;
-        text-overflow: ellipsis;
-    }
-    .fl-table thead th {
-        text-align: left;
-        border-bottom: 1px solid #f7f7f9;
-    }
-    .fl-table tbody tr {
-        display: table-cell;
-    }
-    .fl-table tbody tr:nth-child(odd) {
-        background: none;
-    }
-    .fl-table tr:nth-child(even) {
-        background: transparent;
-    }
-    .fl-table tr td:nth-child(odd) {
-        background: #F8F8F8;
-        border-right: 1px solid #E6E4E4;
-    }
-    .fl-table tr td:nth-child(even) {
-        border-right: 1px solid #E6E4E4;
-    }
-    .fl-table tbody td {
-        display: block;
-        text-align: center;
-    }
+  .fl-table {
+      display: block;
+      width: 100%;
+  }
+  .table-wrapper:before{
+      content: "Scroll horizontally >";
+      display: block;
+      text-align: right;
+      font-size: 11px;
+      color: white;
+      padding: 0 0 10px;
+  }
+  .fl-table thead, .fl-table tbody, .fl-table thead th {
+      display: block;
+  }
+  .fl-table thead th:last-child{
+      border-bottom: none;
+  }
+  .fl-table thead {
+      float: left;
+  }
+  .fl-table tbody {
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+  }
+  .fl-table td, .fl-table th {
+      padding: 20px .625em .625em .625em;
+      height: 60px;
+      vertical-align: middle;
+      box-sizing: border-box;
+      overflow-x: hidden;
+      overflow-y: auto;
+      width: 120px;
+      font-size: 13px;
+      text-overflow: ellipsis;
+  }
+  .fl-table thead th {
+      text-align: left;
+      border-bottom: 1px solid #f7f7f9;
+  }
+  .fl-table tbody tr {
+      display: table-cell;
+  }
+  .fl-table tbody tr:nth-child(odd) {
+      background: none;
+  }
+  .fl-table tr:nth-child(even) {
+      background: transparent;
+  }
+  .fl-table tr td:nth-child(odd) {
+      background: #F8F8F8;
+      border-right: 1px solid #E6E4E4;
+  }
+  .fl-table tr td:nth-child(even) {
+      border-right: 1px solid #E6E4E4;
+  }
+  .fl-table tbody td {
+      display: block;
+      text-align: center;
+  }
 }
+
+/*============ BOOTSTRAP BREAK POINTS:
+
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+=============*/
